--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ Flask-WTF==0.13.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+pyScss==1.3.5
+six==1.10.0
 SQLAlchemy==1.1.4
 webassets==0.12.0
 Werkzeug==0.11.11
