--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 click==6.6
 Flask==0.12
 Flask-Assets==0.12
+flask-marshmallow==0.7.0
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.13.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+marshmallow-sqlalchemy==0.12.0
 pyScss==1.3.5
 six==1.10.0
 SQLAlchemy==1.1.4
