--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "backbone": "^1.3.3",
     "bootstrap": "^3.3.7",
     "requirejs": "^2.3.2",
-    "require-handlebars-plugin": "^1.0.0"
+    "require-handlebars-plugin": "^1.0.0",
+    "jquery-validation": "^1.16.0"
   }
 }
